tests/paczka1/small_fuzzy/83170919.err
Error in line 2: DYRBKA A242 53,03
Error in line 7: S535 S619 848,2
Error in line 1: DYRBKA S619 79,2
